# BL4S

./: .gitignore  CMakeLists.txt  README.md  README_Geant4_Setup.md  setup_geant4_env.ps1  test_geant4.cpp
Art_Analysis_Simulation/: ASSETS_COMPLETE.md  ArtAnalysisManager.cc  ArtAnalysisManager.hh  ArtAnalysisManager_Clean.cc  ArtAnalysisManager_Fixed.cc  ArtAnalysisSimulation.cc  ArtAnalysisSimulation_Fixed.cc  ArtDetectorConstruction.cc  ArtDetectorConstruction.hh  ArtEventAction.cc  ArtEventAction.hh  ArtException.hh  ArtLogger.cc  ArtLogger.hh  ArtPhysicsList.cc  ArtPhysicsList.hh  ArtPrimaryGeneratorAction.cc  ArtPrimaryGeneratorAction.hh  ArtSteppingAction.cc  ArtSteppingAction.hh  ArtSteppingAction_Clean.cc  ArtTrackingAction.cc  ArtTrackingAction.hh  ArtTrackingAction_Clean.cc  ArtTrackingAction_Final.cc  ArtUICommands.cc  ArtUICommands.hh  ArtUICommands_Fixed.cc  ArtUICommands_Working.cc  BFS_READY_PROPOSAL_FR.md  CMakeLists.txt  CMakeLists_Complete.txt  CMakeLists_Final.txt  CMakeLists_Fixed.txt  CMakeLists_Simple.txt  COMPILATION_SUCCESS.md  EXPERIMENT_THEORY.md  FINAL_IMPLEMENTATION_COMPLETE.md  MISSING_COMPONENTS_FIXED.md  PROBLEMS_SOLVED.md  (+58 more)
Art_Analysis_Simulation/reconstruction_output/: reco_areal_map.npy  reco_depth_mip.npy  reco_summary.txt  reco_volume.npy
test_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Geant4Test.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  test_geant4.vcxproj  test_geant4.vcxproj.filters
test_build/test_geant4.dir/Release/: test_geant4.exe.recipe
test_build/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
(+16 files in other folders)
